adding unit test infrastructure